--- a/tutorials/mona_geometrical_eff.ipynb
+++ b/tutorials/mona_geometrical_eff.ipynb
@@ -25,7 +25,8 @@
    "source": [
     "# For running in VSCode, add this line and adjust to your local path of the repository\n",
     "import os\n",
-    "os.chdir(\"/Users/developer/RadDetect/tutorials/\")\n"
+    "os.chdir(\"/Users/developer/RadDetect/tutorials/\")\n",
+    "# os.chdir(\"/home/USER/PATH_TO_REPO/RadDetect/tutorials/\")"
    ]
   },
   {
@@ -240,18 +241,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.7"
   }
  },
  "nbformat": 4,
