Adding detection efficiency calculation

--- a/tutorials/blumchen.ipynb
+++ b/tutorials/blumchen.ipynb
@@ -300,6 +300,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Detection Efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ameas = m.values[m.parameters[0]]\n",
+    "tau = m.values[m.parameters[1]]\n",
+    "t0 = m.values[m.parameters[2]]\n",
+    "sigma_Ameas = m.errors[m.parameters[0]]\n",
+    "sigma_tau = m.errors[m.parameters[1]]\n",
+    "sigma_t0 = m.errors[m.parameters[2]]\n",
+    "\n",
+    "print('Fit Parmeters:\\t A = ',Ameas,'Hz \\t tau = ', tau, 's \\t t0 = ',t0, 's')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A0 = (Ameas*np.exp(t0/ tau)) *1000 #mHz\n",
+    "sigma_A0 = (np.exp(t0 / tau) * np.sqrt(\n",
+    "    (sigma_Ameas) ** 2 +\n",
+    "    (Ameas * t0 / tau**2 * sigma_tau) ** 2 +\n",
+    "    (Ameas / tau * sigma_t0) ** 2\n",
+    ")) *1000 #mHz\n",
+    "print('A at t=0:', A0, 'mHz +/- ', sigma_A0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Compute Detection Efficiency:\n",
+    "Atrue = 25.19 #mBq\n",
+    "sigma_Atrue = 0.77 #mBq\n",
+    "eps = A0/Atrue\n",
+    "sigma_eps = np.sqrt((sigma_A0 / Atrue)**2 + ((sigma_Atrue*A0) / (Atrue**2))**2 )\n",
+    "print(\"Detection Efficiency: \", eps*100, \" % +/-\", sigma_eps*100, \"%\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
